[package]
name = "raster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
embedded-graphics = "0.8.1"
libc = "0.2.148"
nalgebra = "0.32.3"
rayon = "1.8.0"
term_size = "0.3.2"
tinytga = "0.5.0"
